assets/scss/menu.scss
@import 'variables';

.menuBox {
  box-shadow: 0px 0px 5px #CCCCCC;
  margin: auto;
  box-sizing: border-box;
  margin-bottom: 70px;
  margin-top: 0px;
  width:100%;
  background: #2196F3;
  position: fixed;
  padding:15px;
  will-change: transform;
  .menuItems {
    text-align: right;
    a {
      display: inline-block;
      padding: 0px 10px;
      border-right: 1px #fff solid;
      font-size: 15px;
      font-weight: 400;
      letter-spacing: 1px;
      text-transform: uppercase;
      text-decoration: none;
      color: #fafafa;
      &:hover {
        color: #fff;
      }
      &:last-of-type {
        border-right: none;
      }
    }
  }
}

